--- a/.github/workflows/.test-machine-learning.yml
+++ b/.github/workflows/.test-machine-learning.yml
@@ -165,9 +165,6 @@ name: . Test Machine Learning
       hm-unsloth:
         required: true
         type: boolean
-      hm-webrtc-vad:
-        required: true
-        type: boolean
       hm-whisperx:
         required: true
         type: boolean
@@ -210,6 +207,9 @@ name: . Test Machine Learning
       qwen:
         required: true
         type: boolean
+      rnnoise-vad:
+        required: true
+        type: boolean
       speculative-decoding:
         required: true
         type: boolean
@@ -217,6 +217,9 @@ name: . Test Machine Learning
         required: true
         type: boolean
       transformer:
+        required: true
+        type: boolean
+      webrtc-vad:
         required: true
         type: boolean
 
@@ -1781,6 +1784,72 @@ jobs:
           slug: hongbo-miao/hongbomiao.com
           directory: reinforcement-learning/q-learning
 
+  webrtc-vad-test:
+    name: WebRTC VAD | Test
+    if: ${{ inputs.workflow || inputs.webrtc-vad }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7.1.4
+        with:
+          version: 0.9.15
+          enable-cache: true
+          cache-dependency-glob: audio/voice-activity-detector/webrtc-vad/uv.lock
+      - name: Set up Python
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version-file: audio/voice-activity-detector/webrtc-vad/.python-version
+      - name: Install dependencies
+        working-directory: audio/voice-activity-detector/webrtc-vad
+        run: |
+          uv sync --dev
+      - name: Test
+        working-directory: audio/voice-activity-detector/webrtc-vad
+        run: |
+          uv run poe test-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5.5.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: hongbo-miao/hongbomiao.com
+          directory: audio/voice-activity-detector/webrtc-vad
+
+  rnnoise-vad-test:
+    name: RNNoise VAD | Test
+    if: ${{ inputs.workflow || inputs.rnnoise-vad }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7.1.4
+        with:
+          version: 0.9.15
+          enable-cache: true
+          cache-dependency-glob: audio/voice-activity-detector/rnnoise-vad/uv.lock
+      - name: Set up Python
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version-file: audio/voice-activity-detector/rnnoise-vad/.python-version
+      - name: Install dependencies
+        working-directory: audio/voice-activity-detector/rnnoise-vad
+        run: |
+          uv sync --dev
+      - name: Test
+        working-directory: audio/voice-activity-detector/rnnoise-vad
+        run: |
+          uv run poe test-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5.5.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: hongbo-miao/hongbomiao.com
+          directory: audio/voice-activity-detector/rnnoise-vad
+
   silero-vad-test:
     name: Silero VAD | Test
     if: ${{ inputs.workflow || inputs.hm-silero-vad }}
@@ -1813,39 +1882,6 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
           directory: audio/voice-activity-detector/hm-silero-vad
-
-  webrtc-vad-test:
-    name: WebRTC VAD | Test
-    if: ${{ inputs.workflow || inputs.hm-webrtc-vad }}
-    runs-on: ubuntu-24.04
-    timeout-minutes: 10
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6.0.1
-      - name: Install uv
-        uses: astral-sh/setup-uv@v7.1.4
-        with:
-          version: 0.9.15
-          enable-cache: true
-          cache-dependency-glob: audio/voice-activity-detector/hm-webrtc-vad/uv.lock
-      - name: Set up Python
-        uses: actions/setup-python@v6.1.0
-        with:
-          python-version-file: audio/voice-activity-detector/hm-webrtc-vad/.python-version
-      - name: Install dependencies
-        working-directory: audio/voice-activity-detector/hm-webrtc-vad
-        run: |
-          uv sync --dev
-      - name: Test
-        working-directory: audio/voice-activity-detector/hm-webrtc-vad
-        run: |
-          uv run poe test-coverage
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5.5.1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: hongbo-miao/hongbomiao.com
-          directory: audio/voice-activity-detector/hm-webrtc-vad
 
   senko-test:
     name: Senko | Test
