--- a/.mergify.yml
+++ b/.mergify.yml
@@ -650,11 +650,14 @@ pull_request_rules:
           - check-success=Test Machine Learning / Reinforcement Learning (q-learning) | Test
           - check-skipped=Test Machine Learning / Reinforcement Learning (q-learning) | Test
       - or:
-          - check-success=Test Machine Learning / Silero VAD | Test
-          - check-skipped=Test Machine Learning / Silero VAD | Test
-      - or:
           - check-success=Test Machine Learning / WebRTC VAD | Test
           - check-skipped=Test Machine Learning / WebRTC VAD | Test
+      - or:
+          - check-success=Test Machine Learning / RNNoise VAD | Test
+          - check-skipped=Test Machine Learning / RNNoise VAD | Test
+      - or:
+          - check-success=Test Machine Learning / Silero VAD | Test
+          - check-skipped=Test Machine Learning / Silero VAD | Test
       - or:
           - check-success=Test Machine Learning / Senko | Test
           - check-skipped=Test Machine Learning / Senko | Test
