ci(lint): pin action-semantic-pull-request version

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,8 +8,8 @@ pull_request_rules:
           - author=hongbo-miao
           - author=renovate[bot]
       - or:
-          - check-success=Lint - Pull Request Title
-          - check-skipped=Lint - Pull Request Title
+          - check-success=Lint | Pull Request Title
+          - check-skipped=Lint | Pull Request Title
       - or:
           - check-success=Lint / Ansible
           - check-skipped=Lint / Ansible
