--- a/.github/workflows/lint-pull-request-title.yml
+++ b/.github/workflows/lint-pull-request-title.yml
@@ -1,5 +1,5 @@
 ---
-name: Lint - Pull Request Title
+name: Lint | Pull Request Title
 
 'on':
   pull_request_target:
@@ -18,6 +18,6 @@ jobs:
       pull-requests: read
     steps:
       - name: Lint pull request title
-        uses: amannn/action-semantic-pull-request@v6
+        uses: amannn/action-semantic-pull-request@v6.1.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
