fix(render): fix dockerfilePath

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     autoDeploy: false
     runtime: docker
     dockerContext: .
-    dockerfilePath: api/api-node/Dockerfile
+    dockerfilePath: ./api/api-node/Dockerfile
     healthCheckPath: /health
     domains:
       - hongbomiao.com
