--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -92,9 +92,10 @@ jobs:
           uv run poe static-type-check-python --package=api.api-python
           uv run poe static-type-check-python --package=api.api-rust.scripts
           uv run poe static-type-check-python --package=audio.audio-signal-analysis.hm-librosa
-          uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-faster-whisper
-          uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-speaches
-          uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-whisperx
+          uv run poe static-type-check-python --package=audio.automatic-speech-recognition-evaluation.hm-jiwer
+          uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-faster-whisper
+          uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-speaches
+          uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-whisperx
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-diart
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-senko
           uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-silero-vad
