--- a/.github/workflows/.test-machine-learning.yml
+++ b/.github/workflows/.test-machine-learning.yml
@@ -84,6 +84,9 @@ name: . Test Machine Learning
       hm-imagebind:
         required: true
         type: boolean
+      hm-jiwer:
+        required: true
+        type: boolean
       hm-kubeflow-calculate:
         required: true
         type: boolean
@@ -1995,17 +1998,17 @@ jobs:
         with:
           version: 0.9.15
           enable-cache: true
-          cache-dependency-glob: audio/automatic-speech-recognition/hm-faster-whisper/uv.lock
+          cache-dependency-glob: audio/automatic-speech-recognition-inference/hm-faster-whisper/uv.lock
       - name: Set up Python
         uses: actions/setup-python@v6.1.0
         with:
-          python-version-file: audio/automatic-speech-recognition/hm-faster-whisper/.python-version
+          python-version-file: audio/automatic-speech-recognition-inference/hm-faster-whisper/.python-version
       - name: Install dependencies
-        working-directory: audio/automatic-speech-recognition/hm-faster-whisper
+        working-directory: audio/automatic-speech-recognition-inference/hm-faster-whisper
         run: |
           uv sync --dev
       - name: Test
-        working-directory: audio/automatic-speech-recognition/hm-faster-whisper
+        working-directory: audio/automatic-speech-recognition-inference/hm-faster-whisper
         run: |
           uv run poe test-coverage
       - name: Upload coverage to Codecov
@@ -2013,7 +2016,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
-          directory: audio/automatic-speech-recognition/hm-faster-whisper
+          directory: audio/automatic-speech-recognition-inference/hm-faster-whisper
 
   whisperx-test:
     name: WhisperX | Test
@@ -2028,17 +2031,17 @@ jobs:
         with:
           version: 0.9.15
           enable-cache: true
-          cache-dependency-glob: audio/automatic-speech-recognition/hm-whisperx/uv.lock
+          cache-dependency-glob: audio/automatic-speech-recognition-inference/hm-whisperx/uv.lock
       - name: Set up Python
         uses: actions/setup-python@v6.1.0
         with:
-          python-version-file: audio/automatic-speech-recognition/hm-whisperx/.python-version
+          python-version-file: audio/automatic-speech-recognition-inference/hm-whisperx/.python-version
       - name: Install dependencies
-        working-directory: audio/automatic-speech-recognition/hm-whisperx
+        working-directory: audio/automatic-speech-recognition-inference/hm-whisperx
         run: |
           uv sync --dev
       - name: Test
-        working-directory: audio/automatic-speech-recognition/hm-whisperx
+        working-directory: audio/automatic-speech-recognition-inference/hm-whisperx
         run: |
           uv run poe test-coverage
       - name: Upload coverage to Codecov
@@ -2046,7 +2049,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
-          directory: audio/automatic-speech-recognition/hm-whisperx
+          directory: audio/automatic-speech-recognition-inference/hm-whisperx
 
   speaches-test:
     name: Speaches | Test
@@ -2056,28 +2059,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6.0.1
-      - name: Install NVIDIA CUDA Toolkit
-        uses: Jimver/cuda-toolkit@v0.2.29
-        id: cuda-toolkit
-        with:
-          cuda: 12.9.0
-          method: network
       - name: Install uv
         uses: astral-sh/setup-uv@v7.1.4
         with:
           version: 0.9.15
           enable-cache: true
-          cache-dependency-glob: audio/automatic-speech-recognition/hm-speaches/uv.lock
+          cache-dependency-glob: audio/automatic-speech-recognition-inference/hm-speaches/uv.lock
       - name: Set up Python
         uses: actions/setup-python@v6.1.0
         with:
-          python-version-file: audio/automatic-speech-recognition/hm-speaches/.python-version
+          python-version-file: audio/automatic-speech-recognition-inference/hm-speaches/.python-version
       - name: Install dependencies
-        working-directory: audio/automatic-speech-recognition/hm-speaches
+        working-directory: audio/automatic-speech-recognition-inference/hm-speaches
         run: |
           uv sync --dev
       - name: Test
-        working-directory: audio/automatic-speech-recognition/hm-speaches
+        working-directory: audio/automatic-speech-recognition-inference/hm-speaches
         run: |
           uv run poe test-coverage
       - name: Upload coverage to Codecov
@@ -2085,7 +2082,40 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: hongbo-miao/hongbomiao.com
-          directory: audio/automatic-speech-recognition/hm-speaches
+          directory: audio/automatic-speech-recognition-inference/hm-speaches
+
+  jiwer-test:
+    name: JiWER | Test
+    if: ${{ inputs.workflow || inputs.hm-jiwer }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7.1.4
+        with:
+          version: 0.9.15
+          enable-cache: true
+          cache-dependency-glob: audio/automatic-speech-recognition-evaluation/hm-jiwer/uv.lock
+      - name: Set up Python
+        uses: actions/setup-python@v6.1.0
+        with:
+          python-version-file: audio/automatic-speech-recognition-evaluation/hm-jiwer/.python-version
+      - name: Install dependencies
+        working-directory: audio/automatic-speech-recognition-evaluation/hm-jiwer
+        run: |
+          uv sync --dev
+      - name: Test
+        working-directory: audio/automatic-speech-recognition-evaluation/hm-jiwer
+        run: |
+          uv run poe test-coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5.5.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: hongbo-miao/hongbomiao.com
+          directory: audio/automatic-speech-recognition-evaluation/hm-jiwer
 
   stable-diffusion-test:
     name: Stable Diffusion | Test
