--- a/.mergify.yml
+++ b/.mergify.yml
@@ -680,6 +680,9 @@ pull_request_rules:
           - check-success=Test Machine Learning / Speaches | Test
           - check-skipped=Test Machine Learning / Speaches | Test
       - or:
+          - check-success=Test Machine Learning / JiWER | Test
+          - check-skipped=Test Machine Learning / JiWER | Test
+      - or:
           - check-success=Test Machine Learning / Stable Diffusion | Test
           - check-skipped=Test Machine Learning / Stable Diffusion | Test
       - or:
