--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -2,7 +2,10 @@
 
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-  extends: ['config:recommended'],
+  extends: [
+    'config:recommended',
+    ':disableDependencyDashboard',
+  ],
   prConcurrentLimit: 30,
   prHourlyLimit: 20,
   separateMajorMinor: true,
