--- a/.mergify.yml
+++ b/.mergify.yml
@@ -700,9 +700,9 @@ pull_request_rules:
       - or:
           - check-success=Test Machine Learning / torchtune | Test
           - check-skipped=Test Machine Learning / torchtune | Test
-      # - or:
-      #     - check-success=Test Machine Learning / Axolotl | Test
-      #     - check-skipped=Test Machine Learning / Axolotl | Test
+      - or:
+          - check-success=Test Machine Learning / Axolotl | Test
+          - check-skipped=Test Machine Learning / Axolotl | Test
       - or:
           - check-success=Test Machine Learning / LLaMA-Factory | Test
           - check-skipped=Test Machine Learning / LLaMA-Factory | Test
