chore(renovate): add ghcr.io/astral-sh/uv to python-related packages

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -225,6 +225,7 @@
       groupName: 'python-related packages',
       matchPackageNames: [
         'docker.io/python',
+        'ghcr.io/astral-sh/uv',
         'python',
       ],
     },
@@ -233,6 +234,7 @@
       groupName: 'python-related packages - digest, patch, pin updates',
       matchPackageNames: [
         'docker.io/python',
+        'ghcr.io/astral-sh/uv',
         'python',
       ],
       matchUpdateTypes: ['digest', 'patch', 'pin'],
