feat(ios): use catboost coreml model

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -198,6 +198,7 @@ jobs:
           uv run poe static-type-check-python --package=large-language-model-training.automatic-mixed-precision
           uv run poe static-type-check-python --package=load-testing.hm-locust
           uv run poe static-type-check-python --package=machine-learning.convolutional-neural-network
+          uv run poe static-type-check-python --package=machine-learning.core-ml-tools
           uv run poe static-type-check-python --package=machine-learning.feature-store
           uv run poe static-type-check-python --package=machine-learning.graph-neural-network
           uv run poe static-type-check-python --package=machine-learning.hm-cuml
