--- a/.mergify.yml
+++ b/.mergify.yml
@@ -715,6 +715,9 @@ pull_request_rules:
       - or:
           - check-success=Test Machine Learning / Fine Tune Whisper | Test
           - check-skipped=Test Machine Learning / Fine Tune Whisper | Test
+      - or:
+          - check-success=Test Machine Learning / Core ML Tools | Test
+          - check-skipped=Test Machine Learning / Core ML Tools | Test
       # - or:
       #     - check-success=Test Machine Learning / DeepEval | Test
       #     - check-skipped=Test Machine Learning / DeepEval | Test
