--- a/mobile/mobile-ios/justfile
+++ b/mobile/mobile-ios/justfile
@@ -19,8 +19,9 @@ set-up:
     mkdir -p mobile-ios/Resources/Audio
     mkdir -p mobile-ios/Resources/Models
     curl --silent --fail --show-error --location --output mobile-ios/Resources/Audio/audio.wav https://raw.githubusercontent.com/hongbo-miao/hongbomiao.com-data/main/mobile-ios/audio.wav
-    curl --silent --fail --show-error --location --output mobile-ios/Resources/Models/voices.npz https://raw.githubusercontent.com/mlalma/KokoroTestApp/main/Resources/voices.npz
+    curl --silent --fail --show-error --location --output mobile-ios/Resources/Models/breast_cancer_catboost.mlmodel https://raw.githubusercontent.com/hongbo-miao/hongbomiao.com-data/main/mobile-ios/breast_cancer_catboost.mlmodel
     curl --silent --fail --show-error --location --output mobile-ios/Resources/Models/kokoro-v1_0.safetensors https://huggingface.co/mlx-community/Kokoro-82M-bf16/resolve/main/kokoro-v1_0.safetensors
+    curl --silent --fail --show-error --location --output mobile-ios/Resources/Models/voices.npz https://raw.githubusercontent.com/mlalma/KokoroTestApp/main/Resources/voices.npz
 
 open-xcode-workspace:
     open mobile-ios.xcworkspace
