--- a/.mergify.yml
+++ b/.mergify.yml
@@ -718,6 +718,9 @@ pull_request_rules:
       - or:
           - check-success=Test Machine Learning / Core ML Tools | Test
           - check-skipped=Test Machine Learning / Core ML Tools | Test
+      - or:
+          - check-success=Test Machine Learning / Convert ModernBERT to Core ML | Test
+          - check-skipped=Test Machine Learning / Convert ModernBERT to Core ML | Test
       # - or:
       #     - check-success=Test Machine Learning / DeepEval | Test
       #     - check-skipped=Test Machine Learning / DeepEval | Test
