--- a/masked-language-modeling/convert-modern-bert-to-core-ml/pyproject.toml
+++ b/masked-language-modeling/convert-modern-bert-to-core-ml/pyproject.toml
@@ -3,6 +3,7 @@ name = "convert-modern-bert-to-core-ml"
 version = "1.0.0"
 dependencies = [
   "coremltools==9.0",
+  "numpy==2.3.5",
   "torch==2.9.1",
   "transformers==4.57.3",
 ]
