feat(ios): add speaker diarization

--- a/machine-learning/feature-store/justfile
+++ b/machine-learning/feature-store/justfile
@@ -8,7 +8,7 @@ feast-initialize:
     feast init driver_features
 
 download-driver-stats:
-    curl --silent --fail --show-error --location --output driver_features/data/driver_stats.parquet https://raw.githubusercontent.com/hongbo-miao/hongbomiao.com-data/main/feature-store/driver_stats.parquet
+    curl --silent --fail --show-error --location --output driver_features/data/driver_stats.parquet https://media.githubusercontent.com/media/hongbo-miao/hongbomiao.com-data/refs/heads/main/feature-store/driver_stats.parquet
 
 test:
     uv run poe test
