--- a/autonomy/camera-radar-lidar-fusion/justfile
+++ b/autonomy/camera-radar-lidar-fusion/justfile
@@ -12,7 +12,7 @@ check:
 
 set-up:
     # Download nuScenes "Full dataset (v1.0) - Mini - Metadata and sensor file blobs (3.88 GB)" from https://www.nuscenes.org/download and extract to data/v1.0-mini/
-    curl --silent --fail --show-error --location --output data/yolo12m.onnx https://raw.githubusercontent.com/hongbo-miao/hongbomiao.com-data/main/camera-radar-lidar-fusion/yolo12m.onnx
+    curl --silent --fail --show-error --location --output data/yolo12m.onnx https://media.githubusercontent.com/media/hongbo-miao/hongbomiao.com-data/refs/heads/main/camera-radar-lidar-fusion/yolo12m.onnx
 
 dev:
     DYLD_FALLBACK_LIBRARY_PATH="{{ DYLD_FALLBACK_LIBRARY_PATH }}" \
