--- a/system-tool/git/justfile
+++ b/system-tool/git/justfile
@@ -57,6 +57,12 @@ git-remove-secret:
     git log -p -S xxx > git_log.txt
     git filter-repo --replace-text=<(echo 'xxx==>yyy') --refs=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx^..HEAD --force
 
+# Rewrite Git history to move files to Git LFS
+rewrite-git-history-to-move-files-to-git-lfs:
+    git lfs track "*.onnx"
+    git add .gitattributes
+    git lfs migrate import --include="*.onnx" --everything
+
 # Git submodule
 git-submodule-add:
     git submodule add https://github.com/hongbo-miao/hongbomiao.com.git
