feat(data-storage): add geojson

--- a/.editorconfig
+++ b/.editorconfig
@@ -34,6 +34,10 @@ indent_style = space
 indent_size = 4
 indent_style = tab
 
+[{*.geojson,*.json,*.kp}]
+indent_size = 2
+indent_style = space
+
 [{*.go,go.mod}]
 indent_size = 4
 indent_style = tab
@@ -52,10 +56,6 @@ indent_style = space
 
 [*.jl]
 indent_size = 4
-indent_style = space
-
-[{*.json,*.kp}]
-indent_size = 2
 indent_style = space
 
 [{*.kt,*.kts}]
