--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint-html-fix": "eslint . --fix",
     "lint-json-eslint": "eslint .",
     "lint-json-eslint-fix": "eslint . --fix",
-    "lint-json-prettier": "prettier --check '**/*.json'",
-    "lint-json-prettier-fix": "prettier --write '**/*.json'",
+    "lint-json-prettier": "prettier --check '**/*.{geojson,json}'",
+    "lint-json-prettier-fix": "prettier --write '**/*.{geojson,json}'",
     "lint-markdown": "markdownlint-cli2 '**/*.md'",
     "lint-markdown-fix": "markdownlint-cli2 --fix '**/*.md'",
     "lint-natural-language": "textlint '**/*.{c,cjs,cpp,cs,csproj,cu,cuh,dbc,go,gradle,h,hpp,ino,ipynb,java,jl,js,json,kt,kts,m,md,mjs,p4,py,rego,rs,scad,scala,sh,sln,sol,sql,swift,tofu,toml,ts,tsx,vhd,WizardFile,xml,yaml,yml}'",
