chore(app): rename modeling folders

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -98,11 +98,11 @@ jobs:
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition-inference.hm-whisperx
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-diart
           uv run poe static-type-check-python --package=audio.speaker-diarization.hm-senko
-          uv run poe static-type-check-python --package=audio.voice-activity-detector.hm-silero-vad
-          uv run poe static-type-check-python --package=audio.voice-activity-detector.rnnoise-vad
-          uv run poe static-type-check-python --package=audio.voice-activity-detector.webrtc-vad
+          uv run poe static-type-check-python --package=audio.voice-activity-detection.hm-silero-vad
+          uv run poe static-type-check-python --package=audio.voice-activity-detection.rnnoise-vad
+          uv run poe static-type-check-python --package=audio.voice-activity-detection.webrtc-vad
           uv run poe static-type-check-python --package=autonomy.camera-radar-fusion
-          uv run poe static-type-check-python --package=causal-language-modeling.qwen
+          uv run poe static-type-check-python --package=causal-language-model.qwen
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.calculate
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.applications.process-flight-data
           uv run poe static-type-check-python --package=cloud-computing.hm-ray.hm-ray
@@ -220,9 +220,9 @@ jobs:
           uv run poe static-type-check-python --package=machine-learning.nvidia-triton-inference-server.amazon-sagemaker-triton-resnet-50.infer
           uv run poe static-type-check-python --package=machine-learning.stable-diffusion
           uv run poe static-type-check-python --package=machine-learning.transformer
-          uv run poe static-type-check-python --package=masked-language-modeling.convert-modern-bert-to-core-ml
-          uv run poe static-type-check-python --package=masked-language-modeling.modern-bert
-          uv run poe static-type-check-python --package=masked-language-modeling.neo-bert
+          uv run poe static-type-check-python --package=masked-language-model.convert-modern-bert-to-core-ml
+          uv run poe static-type-check-python --package=masked-language-model.modern-bert
+          uv run poe static-type-check-python --package=masked-language-model.neo-bert
           uv run poe static-type-check-python --package=named-entity-recognition.bert
           uv run poe static-type-check-python --package=named-entity-recognition.hm-gliner
           uv run poe static-type-check-python --package=parallel-computing.hm-taichi.count-primes
