--- a/.mergify.yml
+++ b/.mergify.yml
@@ -683,6 +683,9 @@ pull_request_rules:
           - check-success=Test Machine Learning / JiWER | Test
           - check-skipped=Test Machine Learning / JiWER | Test
       - or:
+          - check-success=Test Machine Learning / torchdiffeq | Test
+          - check-skipped=Test Machine Learning / torchdiffeq | Test
+      - or:
           - check-success=Test Machine Learning / Stable Diffusion | Test
           - check-skipped=Test Machine Learning / Stable Diffusion | Test
       - or:
