chore(git): ignore AGENTS.md

--- a/.dockerignore
+++ b/.dockerignore
@@ -30,9 +30,7 @@
 **/.vagrant/**/*
 **/.venv/**/*
 **/.vscode/**/*
-**/.windsurfrules
-**/CLAUDE.md
-**/GEMINI.md
+**/AGENTS.md
 **/__pycache__/**/*
 **/build/**/*
 **/certificates/**/*
