--- a/data-orchestration/hm-prefect/workflows/print-platform/.prefectignore
+++ b/data-orchestration/hm-prefect/workflows/print-platform/.prefectignore
@@ -29,9 +29,7 @@
 **/.vagrant
 **/.venv
 **/.vscode
-**/.windsurfrules
-**/CLAUDE.md
-**/GEMINI.md
+**/AGENTS.md
 **/__pycache__
 **/build
 **/cmake-build-debug
