--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -41,9 +41,7 @@
     "**/.vagrant/**/*",
     "**/.venv/**/*",
     "**/.vscode/**/*",
-    "**/.windsurfrules",
-    "**/CLAUDE.md",
-    "**/GEMINI.md",
+    "**/AGENTS.md",
     "**/__pycache__/**/*",
     "**/build/**/*",
     "**/certificates/**/*",
