--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,9 +34,7 @@ AllCops:
     - '**/.vagrant/**/*'
     - '**/.venv/**/*'
     - '**/.vscode/**/*'
-    - '**/.windsurfrules'
-    - '**/CLAUDE.md'
-    - '**/GEMINI.md'
+    - '**/AGENTS.md'
     - '**/__pycache__/**/*'
     - '**/build/**/*'
     - '**/certificates/**/*'
