--- a/.ruff.toml
+++ b/.ruff.toml
@@ -31,9 +31,7 @@ exclude = [
   "**/.vagrant/**/*",
   "**/.venv/**/*",
   "**/.vscode/**/*",
-  "**/.windsurfrules",
-  "**/CLAUDE.md",
-  "**/GEMINI.md",
+  "**/AGENTS.md",
   "**/__pycache__/**/*",
   "**/build/**/*",
   "**/certificates/**/*",
