--- a/.textlintignore
+++ b/.textlintignore
@@ -30,9 +30,7 @@
 **/.vagrant/**/*
 **/.venv/**/*
 **/.vscode/**/*
-**/.windsurfrules
-**/CLAUDE.md
-**/GEMINI.md
+**/AGENTS.md
 **/__pycache__/**/*
 **/build/**/*
 **/certificates/**/*
