--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -34,9 +34,7 @@ ignore: |
   **/.vagrant/**/*
   **/.venv/**/*
   **/.vscode/**/*
-  **/.windsurfrules
-  **/CLAUDE.md
-  **/GEMINI.md
+  **/AGENTS.md
   **/__pycache__/**/*
   **/build/**/*
   **/certificates/**/*
