--- a/data-orchestration/hm-prefect/workflows/greet/.prefectignore
+++ b/data-orchestration/hm-prefect/workflows/greet/.prefectignore
@@ -30,9 +30,7 @@
 **/.vagrant/**/*
 **/.venv/**/*
 **/.vscode/**/*
-**/.windsurfrules
-**/CLAUDE.md
-**/GEMINI.md
+**/AGENTS.md
 **/__pycache__/**/*
 **/build/**/*
 **/certificates/**/*
